index changed to a better front

--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
                     <div class="list-group-item list-group-item-action bg-light" id="name-dropdown">User name</div><!-- name of the user added here when logged in -->
                     <div class="list-group list-group-flush">
                         <a href="profile/profile.html" class="list-group-item list-group-item-action bg-light">Profile</a>
-                        <a href="history/history.html" class="list-group-item list-group-item-action bg-light">History</a>
-                        <a href="/savedItems/savedItems.html" class="list-group-item list-group-item-action bg-light">Saved items</a>
                         <a href="/signin/signin.html" class="list-group-item list-group-item-action bg-light">Login</a>
                         <a href="contact/contact.html" class="list-group-item list-group-item-action bg-light">Contact</a>
                     </div>
@@ -62,13 +60,13 @@
                         <i class="fas fa-search" aria-hidden="true"></i><br>
                     </form>
                 </div>
+                <article id="articles">
+                </article>
             </section>
-        
-            <!--FOOTER-->
-            <footer id="foot_note">
-                <p>Created by Hari, Clara, Lamia SALHI for the WebInt class 2020 @ Eurecom Insitute</p>
-            </footer>
         </div>
     </body>   
-
+    <!--FOOTER
+    <footer id="foot-note" class="d-flex flex-column">
+        <p>Created by Hari, Clara, Lamia Salhi for the WebInt class 2020 @ Eurecom Insitute</p>
+    </footer>-->
 </html>
