--- a/contact/contact.html
+++ b/contact/contact.html
@@ -10,7 +10,7 @@
         <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="node_modules/jquery/dist/jquery.min.js" rel="script">
         <link href="node_modules/bootstrap/dist/js/bootstrap.min.js" rel="script">
-        <script src="app.js"></script>
+        <script src="/contact/contact.css"></script>
     </head>
     
 	<body onload="main()">
@@ -49,7 +49,7 @@
             <section id="content"  class="center-block " style="height:100vh">
                 <div class="text-center">
                     <div class="mb-5 mt-5">
-                        <h1>CONTACT US</h1>
+                        <h2>CONTACT US</h2>
                         <img src="/images/phone-logo.png" width="25" height="25"alt="">
                         <a href="">+33 0 00 00 00</a>
                     </div>
@@ -101,14 +101,14 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label for="form_message">Message *</label>
-                                        <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please, leave us a message."></textarea>
+                                        <textarea id="form_message" name="message" class="form-control" placeholder="Message..." rows="4" required="required" data-error="Please, leave us a message."></textarea>
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-md-2">
-                                    <input type="submit" class="btn btn-success btn-send" value="Send message">
+                                    <input type="submit" id="sendBtn" class="btn btn-success btn-send" value="Send message">
                                 </div>
                             </div>
                             <div class="row justify-content-center">
