--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                 <div class="collapse navbar-collapse" id="dropdown" style = "display: none">
                     <div class="list-group-item list-group-item-action bg-light" id="name-dropdown">User name</div><!-- name of the user added here when logged in -->
                     <div class="list-group list-group-flush">
-                        <a href="profile/profile.html" class="list-group-item list-group-item-action bg-light">Profile</a>
-                        <a href="/signin/signin.html" class="list-group-item list-group-item-action bg-light">Login</a>
-                        <a href="contact/contact.html" class="list-group-item list-group-item-action bg-light">Contact</a>
+                        <a href="profile/profile.html" id="profile"class="list-group-item list-group-item-action bg-light">Profile</a>
+                        <a href="/signin/signin.html" id="signin" class="list-group-item list-group-item-action bg-light">Login</a>
+                        <a href="contact/contact.html" id="contact" class="list-group-item list-group-item-action bg-light">Contact</a>
                     </div>
                     <div id="user">
-                        <a href="logout/logout.html" class="list-group-item list-group-item-action bg-light">Log Out</a>
+                        <a href="logout/logout.html" id="logout"class="list-group-item list-group-item-action bg-light">Log Out</a>
                     </div>
                 </div>
                 <!-- /#toggle -->
