--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <!-- toggle -->
                 <div class="collapse navbar-collapse" id="dropdown" style = "display: none">
-                    <div class="list-group-item list-group-item-action bg-light" id="name-dropdown">User name</div><!-- name of the user added here when logged in -->
+                    <div class="list-group-item list-group-item-action bg-light" id="name-dropdown">name</div><!-- name of the user added here when logged in -->
                     <div class="list-group list-group-flush">
                         <a href="profile/profile.html" id="profile"class="list-group-item list-group-item-action bg-light">Profile</a>
                         <a href="/signin/signin.html" id="signin" class="list-group-item list-group-item-action bg-light">Login</a>
