profile register contact

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <!-- fallback for browsers that don't support video tag -->
                         <source id = "src_mp4" src="https://ia800300.us.archive.org/21/items/HowToKeepYourLaptopFromBeingStolen/241_face_recognition06_transcoded.mp4"  type="video/mp4">
                         <source id="src_ogv" src="https://ia800300.us.archive.org/21/items/HowToKeepYourLaptopFromBeingStolen/241_face_recognition06_transcoded.ogv" type="video/ogv">
-                        <a href="https://archive.org/details/movies">site where to download video</a>
+                        <a href="https://archive.org/details/movies">site to download video</a>
                         <p>Your browser cannot play the provided video file.</p>
                     </video>
                 </div>
