some problems fixed

--- a/logout/logout.html
+++ b/logout/logout.html
@@ -14,7 +14,7 @@
         <script src="/logout/logout.js"></script>
     </head>
     
-	<body onload="main()">
+	<body>
         <!-- Page Content -->
         <div id="page-content-wrapper">
             
