--- a/contact/contact.html
+++ b/contact/contact.html
@@ -36,11 +36,11 @@
                 <div class="collapse navbar-collapse" id="dropdown" style = "display: none">
                     <div class="list-group-item list-group-item-action bg-light" id="name-dropdown"></div><!-- name of the user added here when logged in -->
                     <div class="list-group list-group-flush">
-                        <a href="profile/profile.html" id= "profile"class="list-group-item list-group-item-action bg-light">Profile</a>
-                        <a href="/signin/signin.html" id="signin"class="list-group-item list-group-item-action bg-light">Login</a>
+                        <a href="profile/profile.html" id= "profile" class="list-group-item list-group-item-action bg-light">Profile</a>
+                        <a href="/signin/signin.html" id="signin" class="list-group-item list-group-item-action bg-light">Login</a>
                     </div>
                     <div id="user">
-                        <a href="logout/logout.html" id="logout"class="list-group-item list-group-item-action bg-light">Log Out</a>
+                        <a href="logout/logout.html" id="logout" class="list-group-item list-group-item-action bg-light">Log Out</a>
                     </div>
                 </div>
                 <!-- /#toggle -->
@@ -50,13 +50,11 @@
                 <div class="text-center">
                     <div class="mb-5 mt-5">
                         <h1>CONTACT US</h1>
-                        <img src="/images/phone-logo.png" width="25" height="25"alt="">
+                        <img src="/images/phone-logo.png" width="25" height="25" alt="">
                         <a href="">+33 0 00 00 00 00 </a>
                     </div>
-                    <form id="contact-form center-block" >
-                    
+                    <form class="contact-form center-block">
                         <div class="controls center-block">
-                    
                             <div class="row justify-content-center" >
                                 <div class="col-md-2 " >
                                     <div class="form-group">
@@ -82,15 +80,14 @@
                                     </div>
                                 </div>
                                 <div class="row justify-content-center">
-                                    <div class="col-md-2"></div>
+                                    <div class="col-md-2">
                                         <div class="form-group" >
                                             <!-- <label for="form_need">Please specify your need *</label> -->
                                             <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
-                                                <option value=""></option>
-                                                <option value="Request abusive"><A>abusive content</A></option>
+                                                <option value="">select</option>
+                                                <option value="Request abusive">abusive content</option>
                                                 <option value="Request error">signal an error of content</option>
                                                 <option value="Request other">other</option>
-                                                <option value="Other">Other</option>
                                             </select>
                                             <div class="help-block with-errors"></div>
                                         </div>
@@ -115,6 +112,7 @@
                                 <div class="col-md-é">
                                     <p class="text-muted">
                                         <strong>*</strong> All fields are required.
+                                    </p>
                                 </div>
                             </div>
                         </div>
