--- a/signin/signin.html
+++ b/signin/signin.html
@@ -26,9 +26,10 @@
                         <span class="sr-only">(current)</span>
                     </a>
                    
-            
+            </nav>>
                 <!-- /#toggle -->
             </header>
+        </div>
             <!--MAIN CONTENT-->
             <section id="content"  class="center-block " style="height:100vh">
                 <div class="text-center mb-5 mt-5">
@@ -58,7 +59,6 @@
             <footer id="foot_note">
                 <p>Created by Hari, Clara AKIKI, Lamia SALHI for the WebInt class 2020 @ Eurecom Insitute</p>
             </footer>
-        </div>
 	</body>
 </html>
 
