--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                         <img src="images/Logo_betterShop.png" width="200" height="200" alt="">
                     </div>
                     <!-- Search form -->
-                    <form class="form-inline d-flex justify-content-center md-form form-sm active-cyan-2 mt-2" id = 'wholesearch'>
-                        <input class="form-control form-control-sm mr-3 w-75" id = 'myInput' type="text" onkeyup="searchbar()"  placeholder="Search"
+                    <div class="form-inline d-flex justify-content-center md-form form-sm active-cyan-2 mt-2" id = 'wholesearch'>
+                        <input class="form-control form-control-sm mr-10 w-75" id = 'myInput' type="text" onkeyup="searchbar()"  placeholder="Search"
                         aria-label="Search">
                         <i class="fas fa-search" aria-hidden="true"></i><br>
-                    </form>
+                    </div>
                 </div>
                 <div class="row justify-content-center my-4">
                     <video id ="videoAdd" class= "video"  controls muted>
@@ -72,11 +72,9 @@
 
                 <article id="articles">
                 </article>
+                <br><br><br>
             </section>
         </div>
     </body>   
-    <!--FOOTER
-    <footer id="foot-note" class="d-flex flex-column">
-        <p>Created by Hari, Clara, Lamia Salhi for the WebInt class 2020 @ Eurecom Insitute</p>
-    </footer>-->
+
 </html>
