--- a/contact/contact.html
+++ b/contact/contact.html
@@ -83,7 +83,7 @@
                                     <div class="col-md-2">
                                         <div class="form-group" >
                                             <!-- <label for="form_need">Please specify your need *</label> -->
-                                            <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
+                                            <select id="form_need" name="need"  required="required" data-error="Please specify your need.">
                                                 <option value="">select</option>
                                                 <option value="Request abusive">abusive content</option>
                                                 <option value="Request error">signal an error of content</option>
