--- a/contact/contact.html
+++ b/contact/contact.html
@@ -73,24 +73,23 @@
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-md-2">
-                                    <div class="form-group" >
-                                        <!-- <label for="form_email">Email *</label> -->
-                                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Email " required="required" data-error="Valid email is required.">
+                                    <div class="form-group">
+                                        <label for="form_email">Email *</label>
+                                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
-                                <div class="row justify-content-center">
-                                    <div class="col-md-2">
-                                        <div class="form-group" >
-                                            <!-- <label for="form_need">Please specify your need *</label> -->
-                                            <select id="form_need" name="need"  required="required" data-error="Please specify your need.">
-                                                <option value="">select</option>
-                                                <option value="Request abusive">abusive content</option>
-                                                <option value="Request error">signal an error of content</option>
-                                                <option value="Request other">other</option>
-                                            </select>
-                                            <div class="help-block with-errors"></div>
-                                        </div>
+                                <div class="col-md-2">
+                                    <div class="form-group">
+                                        <label for="form_need">Please specify your need *</label>
+                                        <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
+                                            <option value=""></option>
+                                            <option value="wrong content">wrong content</option>
+                                            <option value="inappropriate content">inappropriate content</option>
+                                            <option value="Request request">request</option>
+                                            <option value="Other">Other</option>
+                                        </select>
+                                        <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
                             </div>
@@ -109,7 +108,7 @@
                                 </div>
                             </div>
                             <div class="row justify-content-center">
-                                <div class="col-md-é">
+                                <div class="col-md-2">
                                     <p class="text-muted">
                                         <strong>*</strong> All fields are required.
                                     </p>
@@ -119,8 +118,6 @@
                     </form>
                 </div>
             </section>
-        
-            
         </div>
     </body>
 </html>
