--- a/contact/contact.html
+++ b/contact/contact.html
@@ -51,7 +51,7 @@
                     <div class="mb-5 mt-5">
                         <h1>CONTACT US</h1>
                         <img src="/images/phone-logo.png" width="25" height="25" alt="">
-                        <a href="">+33 0 00 00 00 00 </a>
+                        <a >+33 0 00 00 00 00 </a>
                     </div>
                     <form class="contact-form center-block">
                         <div class="controls center-block">
@@ -74,14 +74,12 @@
                             <div class="row justify-content-center">
                                 <div class="col-md-2">
                                     <div class="form-group">
-                                        <label for="form_email">Email *</label>
-                                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
+                                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Email *" required="required" data-error="Valid email is required.">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
                                 <div class="col-md-2">
                                     <div class="form-group">
-                                        <label for="form_need">Please specify your need *</label>
                                         <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
                                             <option value=""></option>
                                             <option value="wrong content">wrong content</option>
