--- a/register/register.html
+++ b/register/register.html
@@ -4,14 +4,13 @@
 	<head>
 		<meta charset="utf-8">
         <title>BTRShopCode</title>
-        <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="/images/Logo_betterShop.png">
-        <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="node_modules/jquery/dist/jquery.min.js" rel="script">
-        <link href="node_modules/bootstrap/dist/js/bootstrap.min.js" rel="script">
-        <link href='/register/register.css' rel="stylesheet">
-        <script src="/register/register.js"></script>
+        <link rel="icon" type="image/x-icon" href="../images/Logo_betterShop.png">
+        <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../node_modules/jquery/dist/jquery.min.js" rel="script">
+        <link href="../node_modules/bootstrap/dist/js/bootstrap.min.js" rel="script">
+        <link href='../register/register.css' rel="stylesheet">
+        <script src="../register/register.js"></script>
     </head>
     
 	<body onload="main()">
@@ -21,7 +20,7 @@
                 <!-- toggle -->
                 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ecfbfb;">
                     <a class="navbar-brand" href="#">
-                        <img src="/images/Logo_betterShop.png" width="40" height="40" class="d-inline-block" alt="">
+                        <img src="../images/Logo_betterShop.png" width="40" height="40" class="d-inline-block" alt="">
                         BTRShop
                         <span class="sr-only">(current)</span>
                     </a>
@@ -82,10 +81,6 @@
         </article>
 
 
-            <!--FOOTER-->
-            <footer id="foot_note">
-                <p>Created by Hari, Clara AKIKI, Lamia SALHI for the WebInt class 2020 @ Eurecom Insitute</p>
-            </footer>
         </div>
 	</body>
 </html>
