--- a/contact/contact.html
+++ b/contact/contact.html
@@ -4,14 +4,13 @@
     <head>
         <meta charset="utf-8">
         <title>BTRShopCode</title>
-        <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="/images/Logo_betterShop.png">
-        <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="node_modules/jquery/dist/jquery.min.js" rel="script">
-        <link href="node_modules/bootstrap/dist/js/bootstrap.min.js" rel="script">
-        <link href='/contact/contact.css' rel="stylesheet">
-        <script src="app.js"></script>
+        <link rel="icon" type="image/x-icon" href="../images/Logo_betterShop.png">
+        <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../node_modules/jquery/dist/jquery.min.js" rel="script">
+        <link href="../node_modules/bootstrap/dist/js/bootstrap.min.js" rel="script">
+        <link href='../contact/contact.css' rel="stylesheet">
+        <script src="../contact/contact.js"></script>
     </head>
     
     <body onload="main()">
@@ -21,7 +20,7 @@
                 <!-- toggle -->
                 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ecfbfb;">
                     <a class="navbar-brand" href="#">
-                        <img src="images/Logo_betterShop.png" width="30" height="30" class="d-inline-block" alt="">
+                        <img src="../images/Logo_betterShop.png" width="30" height="30" class="d-inline-block" alt="">
                         BTRShop
                         <span class="sr-only">(current)</span>
                     </a>
@@ -36,11 +35,11 @@
                 <div class="collapse navbar-collapse" id="dropdown" style = "display: none">
                     <div class="list-group-item list-group-item-action bg-light" id="name-dropdown"></div><!-- name of the user added here when logged in -->
                     <div class="list-group list-group-flush">
-                        <a href="profile/profile.html" id= "profile" class="list-group-item list-group-item-action bg-light">Profile</a>
-                        <a href="/signin/signin.html" id="signin" class="list-group-item list-group-item-action bg-light">Login</a>
+                        <a href="../profile/profile.html" id= "profile" class="list-group-item list-group-item-action bg-light">Profile</a>
+                        <a href="../signin/signin.html" id="signin" class="list-group-item list-group-item-action bg-light">Login</a>
                     </div>
                     <div id="user">
-                        <a href="logout/logout.html" id="logout" class="list-group-item list-group-item-action bg-light">Log Out</a>
+                        <a href="./logout/logout.html" id="logout" class="list-group-item list-group-item-action bg-light">Log Out</a>
                     </div>
                 </div>
                 <!-- /#toggle -->
@@ -50,7 +49,7 @@
                 <div class="text-center">
                     <div class="mb-5 mt-5">
                         <h1>CONTACT US</h1>
-                        <img src="/images/phone-logo.png" width="25" height="25" alt="">
+                        <img src="../images/phone-logo.png" width="25" height="25" alt="">
                         <a >+33 0 00 00 00 00 </a>
                     </div>
                     <form class="contact-form center-block">
