--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 	<head>
 		<meta charset="utf-8">
         <title>BTRShopCode</title>
-        <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="/images/Logo_betterShop.png">
-        <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="./images/Logo_betterShop.png">
+        <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href='style.css' rel="stylesheet">
-        <link href="node_modules/jquery/dist/jquery.min.js" rel="script">
-        <link href="node_modules/bootstrap/dist/js/bootstrap.min.js" rel="script">
+        <link href="./node_modules/jquery/dist/jquery.min.js" rel="script">
+        <link href="./node_modules/bootstrap/dist/js/bootstrap.min.js" rel="script">
         <script src="laptop.js" ></script>
         <script src="app.js"></script>
     </head>
@@ -22,7 +21,7 @@
                 <!-- toggle -->
                 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ecfbfb;">
                     <a class="navbar-brand" href="#">
-                        <img src="/images/Logo_betterShop.png" width="30" height="30" class="d-inline-block" alt="">
+                        <img src="./images/Logo_betterShop.png" width="30" height="30" class="d-inline-block" alt="">
                         BTRShop
                         <span class="sr-only">(current)</span>
                     </a>
@@ -37,12 +36,12 @@
                 <div class="collapse navbar-collapse" id="dropdown" style = "display: none">
                     <div class="list-group-item list-group-item-action bg-light" id="name-dropdown"></div><!-- name of the user added here when logged in -->
                     <div class="list-group list-group-flush">
-                        <a href="profile/profile.html" id="profile" class="list-group-item list-group-item-action bg-light">Profile</a>
-                        <a href="contact/contact.html" id="contact" class="list-group-item list-group-item-action bg-light">Contact</a>
-                        <a href="/signin/signin.html" id="signin" class="list-group-item list-group-item-action bg-light">Login</a>
+                        <a href="./profile/profile.html" id="profile" class="list-group-item list-group-item-action bg-light">Profile</a>
+                        <a href="./contact/contact.html" id="contact" class="list-group-item list-group-item-action bg-light">Contact</a>
+                        <a href="./signin/signin.html" id="signin" class="list-group-item list-group-item-action bg-light">Login</a>
                     </div>
                     <div id="user">
-                        <a href="logout/logout.html" id="logout" class="list-group-item list-group-item-action bg-light">Log Out</a>
+                        <a href="./logout/logout.html" id="logout" class="list-group-item list-group-item-action bg-light">Log Out</a>
                     </div>
                 </div>
                 <!-- /#toggle -->
@@ -51,7 +50,7 @@
             <section id="content"  class="center-block " style="height:100vh">
                 <div class="text-center" id = 'below'>
                     <div class="mb-5 mt-5">
-                        <img src="images/Logo_betterShop.png" width="200" height="200" alt="">
+                        <img src="./images/Logo_betterShop.png" width="200" height="200" alt="">
                     </div>
                     <!-- Search form -->
                     <div class="form-inline d-flex justify-content-center md-form form-sm active-cyan-2 mt-2" id = 'wholesearch'>
