--- a/profile/profile.html
+++ b/profile/profile.html
@@ -22,7 +22,7 @@
             <header>
                 <!-- toggle -->
                 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ecfbfb;">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="../index.html">
                         <img src="../images/Logo_betterShop.png" width="30" height="30" class="d-inline-block" alt="">
                         BTRShop
                         <span class="sr-only">(current)</span>
