--- a/contact/contact.html
+++ b/contact/contact.html
@@ -19,7 +19,7 @@
             <header>
                 <!-- toggle -->
                 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ecfbfb;">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="../index.html">
                         <img src="../images/Logo_betterShop.png" width="30" height="30" class="d-inline-block" alt="">
                         BTRShop
                         <span class="sr-only">(current)</span>
@@ -39,7 +39,7 @@
                         <a href="../signin/signin.html" id="signin" class="list-group-item list-group-item-action bg-light">Login</a>
                     </div>
                     <div id="user">
-                        <a href="./logout/logout.html" id="logout" class="list-group-item list-group-item-action bg-light">Log Out</a>
+                        <a href="../logout/logout.html" id="logout" class="list-group-item list-group-item-action bg-light">Log Out</a>
                     </div>
                 </div>
                 <!-- /#toggle -->
