--- a/signin/signin.html
+++ b/signin/signin.html
@@ -19,7 +19,7 @@
             <header>
                 <!-- toggle -->
                 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ecfbfb;">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="../index.html">
                         <img src="../images/Logo_betterShop.png" width="40" height="40" class="d-inline-block" alt="">
                         BTRShop
                         <span class="sr-only">(current)</span>
