--- a/contact/contact.html
+++ b/contact/contact.html
@@ -73,7 +73,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-md-2">
                                     <div class="form-group">
-                                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Email *" required="required" data-error="Valid email is required.">
+                                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Email" required="required" data-error="Valid email is required.">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
