--- a/register/register.html
+++ b/register/register.html
@@ -13,13 +13,13 @@
         <script src="../register/register.js"></script>
     </head>
     
-	<body onload="main()">
+	<body>
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <header>
                 <!-- toggle -->
                 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ecfbfb;">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="../index.html">
                         <img src="../images/Logo_betterShop.png" width="40" height="40" class="d-inline-block" alt="">
                         BTRShop
                         <span class="sr-only">(current)</span>
