--- a/signin/signin.html
+++ b/signin/signin.html
@@ -13,7 +13,7 @@
         <script src="../signin/signin.js"></script>
     </head>
     
-	<body onload="main()">
+	<body>
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <header>
