--- a/logout/logout.html
+++ b/logout/logout.html
@@ -15,9 +15,9 @@
     
 	<body>
            <!--MAIN CONTENT-->
-            <section id="centered" class="Form mx-auto m-5" style="height:100vh">
+            <section class="center-block" style="height:100vh">
                 <form id="logout-form" style="width: 500px; margin:auto;" onsubmit="return removeLoggedUser()">
-                    <div class="container " >
+                    <div class="container mb-5 mt-5 " >
                         <div class="row justify-content-center align-items-center">
                             <br><br>
                             <h6>What did you think of our services?</h6>
